Final steps- updated readme and images

--- a/HACKATHONS/Hackathon1/My-portfolio/style.css
+++ b/HACKATHONS/Hackathon1/My-portfolio/style.css
@@ -166,10 +166,10 @@ main p {
   color: #000000;
 }
 
-.about-table td:first-child {
+/* .about-table td:first-child {
   font-weight: bold;
   width: 30%;
-}
+} */
 
 .btn {
   display: inline-block;
